# pyemb

./: .gitignore  LICENSE  README.md  list_of_todo.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: index_.html
docs/doctrees/: environment.pickle  index.doctree  modules.doctree  pyemb.doctree
docs/doctrees/tutorials/: index.doctree  lyon.doctree  newsgroup.doctree  planaria.doctree
docs/html/: .buildinfo  api.html  genindex.html  index.html  inst_over.html  installation.html  modules.html  objects.inv  overview.html  py-modindex.html  pyemb.html  refs.html  search.html  searchindex.js
docs/html/_sources/: api.rst.txt  index.rst.txt  inst_over.rst.txt  installation.rst.txt  modules.rst.txt  overview.rst.txt  pyemb.rst.txt  refs.rst.txt
docs/html/_sources/tutorials/: index.rst.txt  lyon.rst.txt  mimic.rst.txt  newsgroup.rst.txt  planaria.rst.txt
docs/html/tutorials/: AUASE.html  index.html  lyon.html  mimic.html  newsgroup.html  planaria.html
docs/source/: api.rst  conf.py  index.rst  installation.rst  modules.rst  pyemb.rst  refs.rst
docs/source/tutorials/: AUASE.rst  Dynamic graph - Lyon school data.ipynb  cells_config.py  lyon.ipynb  lyon.rst  mimic.ipynb  mimic.rst  newsgroup.ipynb  newsgroup.rst  planaria.ipynb  planaria.rst  text_analysis.ipynb
docs/source/tutorials/.ipynb_checkpoints/: AUASE-checkpoint.ipynb  lyon-checkpoint.ipynb
pyemb/: __init__.py  _utils.py  datasets.py  embedding.py  hc.py  plotting.py  preprocessing.py  simulation.py  tools.py
pyemb.egg-info/: SOURCES.txt  top_level.txt
source/: modules.rst
tests/: poking.py  test_embedding.py  test_simulation.py  test_tools.py  test_utils.py
