[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyemb"
version = "1.0.0a13"
description = "EDA for complex data"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["EDA", "embedding"]
authors = [
    {name = "Annie Gray", email = "annie.gray@bristol.ac.uk"},
    {name = "Ed Davis", email = "edward.davis@bristol.ac.uk"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib>=3.9.1.post1",
    "networkx>=3.3",
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "scipy==1.14.1",
    "tqdm>=4.66.4",
    "requests>=2.32.3",
]

[project.optional-dependencies]
doc = ["sphinx", "setuptools>=59.6.0"]
embed = ["numba>=0.60.0"]
wasserstein = ["POT>=0.9.4"]
plotting = ["plotly>=5.22.0"]
hc = ["pygraphviz>=1.13", "fa2_modified>=0.3.10"]
nlp = ["nltk>=3.8.1","textblob>=0.18.0.post0","textblob>=0.18.0.post0"]


[project.urls]
Documentation = "https://pyemb.github.io/pyemb"
Repository = "https://github.com/pyemb/pyemb"